# gpq-tiles

./: .cz.toml  .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  ROADMAP.md  SETUP_SUMMARY.md  codecov.yml  mkdocs.yml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  mutation-tests.yml  python-release.yml  release.yml
context/: ARCHITECTURE.md  CLIPPING_ROBUSTNESS.md  QUANTIZATION_RISKS.md
context/adr/: 001-consolidate-streaming-modes.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/core/: Cargo.toml  README.md  build.rs
crates/core/benches/: streaming.rs  tiling.rs
crates/core/examples/: test_large_file.rs
crates/core/proto/: vector_tile.proto
crates/core/src/: batch_processor.rs  clip.rs  compression.rs  dedup.rs  external_sort.rs  feature_drop.rs  golden.rs  integration_tests.rs  lib.rs  memory.rs  mvt.rs  pipeline.rs  pmtiles_writer.rs  property_filter.rs  quality.rs  simplify.rs  spatial_index.rs  tile.rs  validate.rs  wkb.rs
crates/core/tests/: clip_robustness.rs  ioverlay_eval.rs
crates/python/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
crates/python/src/: lib.rs
crates/python/tests/: conftest.py  test_convert.py
docs/: ARCHITECTURE.md  advanced-usage.md  api-reference.md  architecture.md  getting-started.md  index.md
docs/plans/: 2026-02-20-phase2-naive-tiling.md
scripts/: create_streaming_fixtures.py
tests/fixtures/golden/: README.md  fieldmaps-boundaries.pmtiles  open-buildings.pmtiles  road-detections.pmtiles
tests/fixtures/golden/decoded/: open-buildings-z10-x516-y377.geojson  open-buildings-z5-x16-y11.geojson  open-buildings-z6-x32-y23.geojson  open-buildings-z7-x64-y47.geojson  open-buildings-z8-x129-y94.geojson  open-buildings-z9-x258-y188.geojson
tests/fixtures/realdata/: README.md  fieldmaps-boundaries.parquet  fieldmaps-madagascar-adm4.parquet  open-buildings.parquet  road-detections.parquet
tests/fixtures/streaming/: multi-rowgroup-small.parquet  no-geo-metadata.parquet  unsorted.parquet
