[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Nissim Lebovits <nlebovits@pm.me>"]
license = "Apache-2.0"
repository = "https://github.com/geoparquet-io/gpq-tiles"
homepage = "https://github.com/geoparquet-io/gpq-tiles"
keywords = ["geoparquet", "pmtiles", "vector-tiles", "mvt", "geospatial"]
categories = ["science", "data-structures", "encoding"]

[workspace.dependencies]
# Core geospatial dependencies
geoarrow = "0.7"
geoarrow-array = "0.7"
geo-traits = "0.3"
geoparquet = "0.7"
parquet = "57"
arrow-schema = "57"
geo = "0.32"
pmtiles = "0.19"
geozero = "0.15"

# Protobuf for MVT encoding
prost = "0.14"
prost-build = "0.14"

# Parallelism and spatial indexing
rayon = "1.10"
rstar = "0.12"

# CLI
clap = { version = "4", features = ["derive"] }

# Python bindings
pyo3 = { version = "0.28", features = ["extension-module"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
log = "0.4"
env_logger = "0.11"

# Note: Install these separately with cargo install:
# - cargo-tarpaulin (coverage)
# - cargo-mutants (mutation testing)
# - cargo-watch (auto-run tests)

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
