[package]
name = "gpq2tiles"
description = "CLI tool for converting GeoParquet to PMTiles vector tiles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "gpq2tiles"
path = "src/main.rs"

[dependencies]
gpq2tiles-core = { path = "../core" }
clap = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
