[package]
name = "gpq-tiles"
description = "CLI tool for converting GeoParquet to PMTiles vector tiles"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "gpq-tiles"
path = "src/main.rs"

[dependencies]
gpq-tiles-core = { path = "../core", version = "0.1.0" }
clap = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
indicatif = { workspace = true }
